creating nutrition table

--- a/ketolife_2.ipynb
+++ b/ketolife_2.ipynb
@@ -3,120 +3,86 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import requests\n",
-    "from bs4 import BeautifulSoup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "html = requests.get(\"https://www.ruled.me/keto-buffalo-chicken-bowl/\").content\n",
-    "soup = BeautifulSoup(html, 'html.parser')\n",
-    "table = soup.find_all('table')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tds = table[0].find_all('td')"
+    "# Crawl keto website"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NUTRITION</th>\n",
-       "      <th>CALORIES</th>\n",
-       "      <th>FAT</th>\n",
-       "      <th>CARBS</th>\n",
-       "      <th>FIBER</th>\n",
-       "      <th>NET CARBS</th>\n",
-       "      <th>PROTEIN</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [NUTRITION, CALORIES, FAT, CARBS, FIBER, NET CARBS, PROTEIN]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.DataFrame(tds)\n",
-    "df2 = pd.DataFrame(columns=df.iloc[:7,:1][0].tolist())"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import requests\n",
+    "import re\n",
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_content(url):\n",
+    "    html = requests.get(url).content\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
+    "    return soup\n",
+    "\n",
+    "def get_element(soup, element):\n",
+    "    el = soup.find(element)\n",
+    "    return el\n",
+    "\n",
+    "def get_elements(soup, element):\n",
+    "    el = soup.find_all(element)\n",
+    "    return el"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://www.ruled.me/keto-buffalo-chicken-bowl/\"\n",
+    "el = 'table'\n",
+    "\n",
+    "soup = get_content(url)\n",
+    "table = get_element(soup, el)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning the nutrition table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tds = table.find_all('td')\n",
+    "\n",
     "arr = list()\n",
+    "\n",
     "for t in tds:\n",
-    "    arr.append(t.text)"
+    "    arr.append(t.text)\n",
+    "    \n",
+    "arr = np.array(arr)   \n",
+    "\n",
+    "clean_df = pd.DataFrame(np.reshape(arr,(int(len(arr)/7), 7)))\n",
+    "clean_df.columns = clean_df.iloc[0,:].tolist()\n",
+    "clean_df.drop(clean_df.index[0], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "arr = np.array(arr)\n",
-    "df3 = pd.DataFrame(np.reshape(arr,(int(len(arr)/7), 7)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -304,19 +270,151 @@
        "12    40.2  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df3.columns = df3.iloc[0,:].tolist()\n",
-    "df3.drop(df3.index[0])"
+    "clean_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert metrics\n",
+    "* From once to gr\n",
+    "* From tablespoon to gr\n",
+    "* cup to gr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['12.00 ounce cooked chicken',\n",
+       " '3.00 tablespoon butter',\n",
+       " '0.25 cup hot sauce',\n",
+       " '12.00 ounce romaine lettuce',\n",
+       " '3.00 ounce cooked bacon',\n",
+       " '0.25 cup banana peppers',\n",
+       " '4.00 medium green onion',\n",
+       " '3.00 ounce cherry tomatoes',\n",
+       " '1.00 medium avocado',\n",
+       " '6.00 tablespoon ranch dressing',\n",
+       " 'Totals',\n",
+       " 'Per Serving (/3)']"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nutri_list = clean_df[\"NUTRITION\"].tolist()\n",
+    "nutri_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_numbers(nutrition):\n",
+    "        x = re.findall(r'(\\d+)',nutrition)\n",
+    "        return float(x[0] + '.' + x[1])\n",
+    "    \n",
+    "def generalize_measurements(nutrition):\n",
+    "    measurements = [\"ounce\",\"tablespoon\", \"cup\"]\n",
+    "    meas_dic = {\n",
+    "        \"ounce\":28.3495231,\n",
+    "        \"tablespoon\": 14.3, \n",
+    "        \"cup\":128\n",
+    "    }\n",
+    "    \n",
+    "    nut_list = nutrition.split(\" \")\n",
+    "        \n",
+    "    if len(nut_list) > 1:    \n",
+    "        if isfloat(nut_list[0]):\n",
+    "            if nut_list[1] in measurements:\n",
+    "                    grams = str(int(meas_dic[nut_list[1]] * float(nut_list[0])))\n",
+    "                    nut_list[0] = grams\n",
+    "                    nut_list[1] = \"grams\"\n",
+    "                    return ' '.join(nut_list)\n",
+    "            else:\n",
+    "                    grams = str(int(float(nut_list[0])))\n",
+    "                    nut_list[0] = grams\n",
+    "                    return ' '.join(nut_list)\n",
+    "                \n",
+    "    return nutrition        \n",
+    "        \n",
+    "def isfloat(num):\n",
+    "    try:\n",
+    "        float(num)\n",
+    "        return True\n",
+    "    except ValueError:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['340 grams cooked chicken',\n",
+       " '42 grams butter',\n",
+       " '32 grams hot sauce',\n",
+       " '340 grams romaine lettuce',\n",
+       " '85 grams cooked bacon',\n",
+       " '32 grams banana peppers',\n",
+       " '4 medium green onion',\n",
+       " '85 grams cherry tomatoes',\n",
+       " '1 medium avocado',\n",
+       " '85 grams ranch dressing',\n",
+       " 'Totals',\n",
+       " 'Per Serving (/3)']"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "converted_nut = list()\n",
+    "for n in nutri_list:\n",
+    "    y = generalize_measurements(n)\n",
+    "    converted_nut.append(y)\n",
+    "converted_nut"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Translate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,60 +436,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sent = [\n",
-    "\"The chicken also has some nice heat, with the inclusion of hot sauce. Feel free to use any type you’d like (sriracha is a great choice).\" ,\n",
-    "\n",
-    "\"Chicken is high in protein and also contains many essential vitamins like iron, zinc, vitamin B6, and vitamin B12 which help keep us healthy and thriving!\",\n",
-    "\n",
-    "\"Getting enough protein is vital for keeping our muscles healthy and making sure our body is repairing the way it should. A protein-rich diet can also assist with weight loss since protein promotes feelings of fullness while also helping to maintain lean body mass and promote muscle growth.\",\n",
-    "\n",
-    "\"This keto buffalo chicken bowl also contains one medium avocado. Apart from adding a creamy element to this bowl, avocados are incredibly nutritious and can even lower blood pressure and protect against heart disease! \",\n",
-    "\n",
-    "\"Avocados are also high in fat. Don’t worry; the fat in avocados isn’t the same as fried or processed food. Over half of the fat found in this fruit is monounsaturated fatty acids, which are super healthy. They’re also a great source of vitamins and minerals.\",\n",
-    "\n",
-    "\"This dish can be pre-made ahead of time for easy consumption at work, school, or anywhere on the go. Cut up your veggies, fry up some bacon, grab some leftover chicken, and drizzle on some ranch before assembling it anytime you’d like. Super easy!\"\n",
-    "]\n",
-    "\n",
-    "translated = translationFromEntoBg(df3[\"NUTRITION\"].tolist())\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['ХРАНЕНИЕ',\n",
-       " '12,00 унции варено пиле',\n",
-       " '3,00 супени лъжици масло',\n",
-       " '0,25 чаша лют сос',\n",
-       " '12,00 унции ромен салата',\n",
-       " '3,00 унции варен бекон',\n",
-       " '0,25 чаша бананови чушки',\n",
-       " '4.00 среден зелен лук',\n",
-       " '3,00 унции чери домати',\n",
-       " '1,00 средно авокадо',\n",
-       " '6,00 супени лъжици ранчо дресинг',\n",
+       "['340 грама варено пилешко',\n",
+       " '42 грама масло',\n",
+       " '32 грама лют сос',\n",
+       " '340 грама маруля ромен',\n",
+       " '85 грама варен бекон',\n",
+       " '32 грама бананови чушки',\n",
+       " '4 средни зелен лук',\n",
+       " '85 грама чери домати',\n",
+       " '1 средно авокадо',\n",
+       " '85 грама ранчо дресинг',\n",
        " 'Общо',\n",
        " 'На порция (/3)']"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "translated\n",
-    "# df3[\"NUTRITION\"].tolist()"
+    "translated = translationFromEntoBg(converted_nut)\n",
+    "translated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NUTRITION</th>\n",
+       "      <th>CALORIES</th>\n",
+       "      <th>FAT</th>\n",
+       "      <th>CARBS</th>\n",
+       "      <th>FIBER</th>\n",
+       "      <th>NET CARBS</th>\n",
+       "      <th>PROTEIN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>340 грама варено пилешко</td>\n",
+       "      <td>748</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>78.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>42 грама масло</td>\n",
+       "      <td>305</td>\n",
+       "      <td>34.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32 грама лют сос</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>340 грама маруля ромен</td>\n",
+       "      <td>58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>7.1</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>4.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>85 грама варен бекон</td>\n",
+       "      <td>466</td>\n",
+       "      <td>36.8</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>30.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>32 грама бананови чушки</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>4 средни зелен лук</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>1.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>85 грама чери домати</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1 средно авокадо</td>\n",
+       "      <td>301</td>\n",
+       "      <td>27.7</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>85 грама ранчо дресинг</td>\n",
+       "      <td>387</td>\n",
+       "      <td>40.1</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>1.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Общо</td>\n",
+       "      <td>2314</td>\n",
+       "      <td>185.1</td>\n",
+       "      <td>43.6</td>\n",
+       "      <td>23.2</td>\n",
+       "      <td>20.4</td>\n",
+       "      <td>120.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>На порция (/3)</td>\n",
+       "      <td>771</td>\n",
+       "      <td>61.7</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>40.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   NUTRITION CALORIES    FAT CARBS FIBER NET CARBS PROTEIN\n",
+       "1   340 грама варено пилешко      748   44.2     0     0         0    78.2\n",
+       "2             42 грама масло      305   34.5     0     0         0     0.4\n",
+       "3           32 грама лют сос        6    0.2     1   0.2       0.8     0.3\n",
+       "4     340 грама маруля ромен       58      1  11.2   7.1       4.1     4.2\n",
+       "5       85 грама варен бекон      466   36.8   1.2     0       1.2    30.4\n",
+       "6    32 грама бананови чушки        8    0.2   1.7   1.1       0.6     0.5\n",
+       "7         4 средни зелен лук       19    0.1   4.4   1.6       2.8     1.1\n",
+       "8       85 грама чери домати       15    0.2   3.3     1       2.3     0.8\n",
+       "9           1 средно авокадо      301   27.7  15.6  12.2       3.3     3.5\n",
+       "10    85 грама ранчо дресинг      387   40.1   5.3     0       5.3     1.2\n",
+       "11                      Общо     2314  185.1  43.6  23.2      20.4   120.6\n",
+       "12            На порция (/3)      771   61.7  14.5   7.7       6.8    40.2"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_df[\"NUTRITION\"] = translated\n",
+    "clean_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get Images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "images/keto_buffalo_chicken_bowl_1.jpg\n",
+      "An exception occurred\n"
+     ]
+    }
+   ],
+   "source": [
+    "title = get_element(soup, 'h1').text\n",
+    "title = title.lower().replace(' ','_')\n",
+    "\n",
+    "images = get_elements(soup, 'img')\n",
+    "cnt = 1\n",
+    "for i in images[:1]:\n",
+    "    try:\n",
+    "        if int(i['width']) >= 600:\n",
+    "#             display_img(i['src'])\n",
+    "            lnk = i.get('src')\n",
+    "            print('images/'+title+'_'+str(cnt)+'.jpg')\n",
+    "            with open('images/'+title+'_'+str(cnt)+'.jpg', \"r\") as f:\n",
+    "                f.write(requests.get(lnk).content)\n",
+    "                cnt+=1\n",
+    "\n",
+    "    except:\n",
+    "        print(\"An exception occurred\")  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from IPython.display import Image, HTML\n",
+    "\n",
+    "def display_img(url):\n",
+    "    row_1 = [example.attrs['alt'], '<img src=\"images/book1.jpg\"/>']\n",
+    "    df = pd.DataFrame(row_1).transpose()\n",
+    "    df.columns = ['Title', 'Cover']\n",
+    "    HTML(df.to_html(escape=False))"
    ]
   },
   {
